test/sema/typeck/binop/array-compound-assign-missing-index-set.dora
struct Foo(Int)

impl std::traits::IndexGet for Foo {
    type Index = Int;
    type Item = Float64;

    fn get(index: Int): Float64 { 0.0 }
}

fn f(array: Foo, value: Float64) {
    array(99) += value;
}
